--- a/.classpath
+++ b/.classpath
@@ -3,6 +3,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="lib" path="javassist-3.19.0-GA.jar"/>
-	<classpathentry kind="lib" path="Metrics.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/kuyun_metric"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
